--- a/poetry/index.html
+++ b/poetry/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body bgcolor="#FFFFF0">
-	<div>
+	<div align="justify">
 		<font face="Arial Black"><h3>I was born and then art pressed 'pause' and waited for me. I would not call my self a poet. Just an earthling. I write using my heart and sometimes a Macbook pro. I listen to the sounds of earth and sometimes the neighbours having intercourse. I visualise the pain and agony of the modern human being and sometimes bad Soviet films. Herewith I present you with my latest poem collection. It is a collection of poems. One day every literature book in Zanzibar will record my name so make sure you get it right. 'Nikolaos Petros Triantafyllidis'.</h3></font></body>
 	</div>
 			
@@ -36,7 +36,7 @@
 		<font face="Arial Black"><a href="./chickflick.html">Chickflick</a></font><br/>
 		<font face="Arial Black"><a href="./finances.html">Finances</a></font><br/>
 		<font face="Arial Black"><a href="./politics.html">Politics</a></font><br/>
-		<font face="Arial Black"><a href="./attempt.html">Attempt</a></font><br/>
+		<font face="Arial Black"><a href="./attempt.html">Attempt?</a></font><br/>
 	</div>
 </body>
 <footer>
