added smalltalk link

--- a/poetry/index.html
+++ b/poetry/index.html
@@ -37,6 +37,7 @@
 		<font face="Arial Black"><a href="./finances.html">Finances</a></font><br/>
 		<font face="Arial Black"><a href="./politics.html">Politics</a></font><br/>
 		<font face="Arial Black"><a href="./attempt.html">Attempt?</a></font><br/>
+		<font face="Arial Black"><a href="./smalltalk.html">Smalltalk</a></font><br/>
 	</div>
 </body>
 <footer>
