--- a/poetry/basic.html
+++ b/poetry/basic.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Smalltalk</title>
+<title>Basic Aritmetic</title>
 	<style>
 		a:link {
    		 	color:#000000;
@@ -25,14 +25,18 @@
 		</style>
 </head>
 <body bgcolor="#FFFFF0">
-<font face="Arial Black"><h1><center>Smalltalk</center></h1></font></body>
+<font face="Arial Black"><h1><center>Basic Arithmetic</center></h1></font></body>
 <font face="Arial Black"><center> 
 
-'I don't know whom I love more', she said.<br/>
-'God, my mother or yogurt.'<br/><br/>
+It took my 1 year to get to that place,<br/>
+and another 2 years to return.<br/><br/>
 
-'You're nuts.', he said.<br/>
-'NUTS, thank you!', she said.<br/>
+It took another 3 years to realize I had to go back<br/>
+and by the time I was finished 4 years had passed.<br/><br/>
+
+5 years later nothing was as hard as it was at first,<br/>
+but it was only by year 6 that I remembered I was telling this story to my dog<br/>
+and had to multiply everything by 7 years.<br/>
 
 </center>
 </font>
@@ -40,4 +44,4 @@
 	<center><font face="Arial Black"><h6><a href="./index.html">Index</a></h6></font></center>
 </footer>
 </body>
-</html>
+</html>	
