--- a/poetry/index.html
+++ b/poetry/index.html
@@ -38,6 +38,7 @@
 		<font face="Arial Black"><a href="./politics.html">Politics</a></font><br/>
 		<font face="Arial Black"><a href="./attempt.html">Attempt?</a></font><br/>
 		<font face="Arial Black"><a href="./smalltalk.html">Smalltalk</a></font><br/>
+		<font face="Arial Black"><a href="./basic.html">Basic Arithmetic</a></font><br/>
 	</div>
 </body>
 <footer>
