--- a/poetry/basic.html
+++ b/poetry/basic.html
@@ -28,7 +28,7 @@
 <font face="Arial Black"><h1><center>Basic Arithmetic</center></h1></font></body>
 <font face="Arial Black"><center> 
 
-It took my 1 year to get to that place,<br/>
+It took me 1 year to get to that place,<br/>
 and another 2 years to return.<br/><br/>
 
 It took another 3 years to realize I had to go back<br/>
