--- a/poetry/index.html
+++ b/poetry/index.html
@@ -40,6 +40,7 @@
 		<font face="Arial Black"><a href="./smalltalk.html">Smalltalk</a></font><br/>
 		<font face="Arial Black"><a href="./basic.html">Basic Arithmetic</a></font><br/>
 		<font face="Arial Black"><a href="./queried.html">Queried</a></font><br/>
+		<font face="Arial Black"><a href="./maybe.html">Maybe</a></font><br/>
 	</div>
 </body>
 <footer>
