--- a/poetry/queried.html
+++ b/poetry/queried.html
@@ -44,7 +44,7 @@
 "Is is really that annoying?", he asked.<br/><br/>
 
 "Fuck off John...", she said with a tone of despair.<br/>
-"Would you like fries with that?", he asked.<br/><br/>
+"Would you like fries with that?", he asked.<br/>
 
 </center>
 </font>
