--- a/poetry/index.html
+++ b/poetry/index.html
@@ -41,7 +41,7 @@
 		<font face="Arial Black"><a href="./basic.html">Basic Arithmetic</a></font><br/>
 		<font face="Arial Black"><a href="./queried.html">Queried</a></font><br/>
 		<font face="Arial Black"><a href="./maybe.html">Maybe</a></font><br/>
-		<font face="Arial Black"><a href="./corporate.html">Maybe</a></font><br/>
+		<font face="Arial Black"><a href="./corporate.html">Corporate Culture</a></font><br/>
 		
 	</div>
 </body>
