--- a/poetry/corporate.html
+++ b/poetry/corporate.html
@@ -36,7 +36,8 @@ As he asked me if the yearly report was ready.</br>
 I said 'probably'.</br></br>
 
 He smiled.</br>
-He must have liked the answer.</br></br>
+He must have liked the answer.</br>
+The report wasn't ready.</br></br>
 
 </center>
 </font>
@@ -49,4 +50,3 @@ He must have liked the answer.</br></br>
 
 
 
-The report wasn't ready. 
