--- a/poetry/index.html
+++ b/poetry/index.html
@@ -27,7 +27,7 @@
 
 <body bgcolor="#FFFFF0">
 	<div align="justify">
-		<font face="Arial Black"><h3>I was born and then art pressed 'pause' and waited for me. I would not call my self a poet. Just an earthling. I write using my heart and sometimes a Macbook pro. I listen to the sounds of earth and sometimes the neighbours having intercourse. I visualise the pain and agony of the modern human being and sometimes bad Soviet films. Herewith I present you with my latest poem collection. It is a collection of poems. One day every literature book in Zanzibar will record my name so make sure you get it right. 'Nikolaos Petros Triantafyllidis'.</h3></font></body>
+		<font face="Arial Black"><h3>I was born and then art pressed 'pause' and waited for me. I would not call my self a poet. Just an earthling. I write using my heart and sometimes a Macbook pro. I listen to the sounds of earth and sometimes the neighbours having intercourse. I visualise the pain and agony of the modern human being and sometimes bad Soviet films. Herewith I present you with my latest poem collection. It is a collection of poems. One day every literature book in Zanzibar will record my name so make sure you get it right. 'Nikolaos Petros Triantafyllidis'.</h3></font>
 	</div>
 			
 	<div>
@@ -42,8 +42,19 @@
 		<font face="Arial Black"><a href="./queried.html">Queried</a></font><br/>
 		<font face="Arial Black"><a href="./maybe.html">Maybe</a></font><br/>
 		<font face="Arial Black"><a href="./corporate.html">Corporate Culture</a></font><br/>
-		
 	</div>
+	<div align="justify">
+		<font face="Arial Black"><h3>Here is a mini series within the series. It's called 'Literature'. It deals with sculpture.</h3></font>
+	</div>
+	
+	<div>
+		<font face="Arial Black"><h3>Literature</h3></font>
+		<font face="Arial Black"><a href="./literature.html">Literature</a></font><br/>
+		<font face="Arial Black"><a href="./literature2.html">Literature II</a></font><br/>
+		<font face="Arial Black"><a href="./literature3.html">Literature III</a></font><br/>
+		<font face="Arial Black"><a href="./literature4.html">Literature IV</a></font><br/>
+	</div>
+	
 </body>
 <footer>
 	<font face="Arial Black"><h6> Poetry, HTML and Web Server software were produced in-house using nothing but the finest Dutch incredients. Shall you have any comment about any of the above, keep them to yourself.</h6></font>
