--- a/poetry/Literature.html
+++ b/poetry/Literature.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Corporate culture</title>
+<title>Literature</title>
 	<style>
 		a:link {
    		 	color:#000000;
@@ -25,19 +25,14 @@
 		</style>
 </head>
 <body bgcolor="#FFFFF0">
-<font face="Arial Black"><h1><center>Corporate culture</center></h1></font></body>
+<font face="Arial Black"><h1><center>Literature</center></h1></font></body>
 <font face="Arial Black"><center> 
 
-The manager entered my office.</br>
-And this could be the end of this poem.</br></br>
-
-But it is not.</br>
-As he asked me if the yearly report was ready.</br>
-I said 'probably'.</br></br>
-
-He smiled.</br>
-He must have liked the answer.</br>
-The report wasn't ready.</br>
+- Can you recommend me a good book?</br>
+- Yes, the phone book.</br>
+- I've read it.</br>
+- You could read it again.</br>
+- True.</br>
 
 </center>
 </font>
