--- a/poetry/queried.html
+++ b/poetry/queried.html
@@ -32,7 +32,7 @@
 "Stacy?", he asked.<br/><br/>
 
 "Can you remember the last time we saw each other?", she asked with a tone of surprise.<br/>
-"Can you remember the last time you saw a tucan bird dressed in a half black half red handkit sweater?", he asked.<br/><br/>
+"Can you remember the last time you saw a tucan bird dressed in a half black half red handknit sweater?", he asked.<br/><br/>
 
 "Are you gonna vote?", she asked mildy buffled.<br/>
 "Are you gonna dance naked in the middle of the street on a mildly cold Thursday evening?", he asked.<br/><br/>
